--- a/Styles/style.css
+++ b/Styles/style.css
@@ -18,3 +18,75 @@ img.bg {
     top: 0;
     left: 0;
 }
+
+h1 {
+    color: #000;
+    font-family: Inter;
+    font-size: 2rem;
+    line-height: normal;
+}
+
+.main_content {
+    display: flex;
+    margin: 12rem 8rem 0rem 8rem;
+    padding: 1rem;
+    /* width: 103.5rem; */
+    /* height: 45rem; */
+    /* padding: 0rem 1.875rem 0.625rem 1.875rem; */
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* align-items: flex-start; */
+    color: white;
+    border-radius: 0.5rem;
+    background: rgba(111, 114, 135, 0.80);
+}
+
+.welcome_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.address_container {
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: nowrap; */
+    justify-content: space-evenly;
+}
+
+.map {
+    display: flex;
+    height: 19rem;
+}
+
+.map img {
+
+    border-radius: 0.625rem;
+}
+
+.addressHours {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    /* align-content: center; */
+    align-items: center;
+}
+
+.hours {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dayTimes {
+    display: flex;
+}
+
+ul {
+    list-style: none;
+}
